// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`commands should work with config 1`] = `
Object {
  "stderr": "⚡ - Loading configurations from /whook/packages/whook-example/dist/config/test/config\\".
✔ - Found the project dir \\"/home/nfroidure/nfroidure/whook/packages/whook-example\\".
",
  "stdout": "\\"localhost\\"
",
}
`;

exports[`commands should work with env 1`] = `
Object {
  "stderr": "⚡ - Loading configurations from /whook/packages/whook-example/dist/config/test/config\\".
✔ - Found the project dir \\"/home/nfroidure/nfroidure/whook/packages/whook-example\\".
🖥 - Using local env.
",
  "stdout": "test
",
}
`;

exports[`commands should work with ls 1`] = `
Object {
  "stderr": "⚡ - Loading configurations from /whook/packages/whook-example/dist/config/test/config\\".
✔ - Found the project dir \\"/home/nfroidure/nfroidure/whook/packages/whook-example\\".
",
  "stdout": "

# Provided by \\"@whook/example\\": 4 commands
- generateOpenAPISchema: Write openAPI schema to stdout
- generateOpenAPITypes: Write openAPI types to stdout
- printEnv: A command printing every env values
- terraformValues: A command printing lambdas informations for Terraform


# Provided by \\"@whook/aws-lambda\\": 7 commands
- testConsumerLambda: A command for testing AWS consumer lambda
- testCronLambda: A command for testing AWS cron lambda
- testHTTPLambda: A command for testing AWS HTTP lambda
- testKafkaConsumerLambda: A command for testing AWS lambda Kafka consumers
- testS3Lambda: A command for testing AWS consumer lambda
- testS3Lambda: A command for testing AWS consumer lambda
- testTransformerLambda: A command for testing AWS lambda transformers


# Provided by \\"@whook/cli\\": 6 commands
- config: A simple program that returns the queryed config value
- create: A command helping to create new Whook files easily
- env: A command printing env values
- handler: Runs the given server handler for testing purpose
- inspect: A simple program that returns the result of the injected service
- ls: Print available commands


# Provided by \\"@whook/cors\\": none


# Provided by \\"@whook/whook\\": none
",
}
`;
